--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,9 @@ build/Release
 # https://docs.npmjs.com/misc/faq#should-i-check-my-node-modules-folder-into-git
 node_modules
 
+# ide
+.idea
+
 # =========================
 # Operating System Files
 # =========================
@@ -77,3 +80,5 @@ $RECYCLE.BIN/
 
 # Windows shortcuts
 *.lnk
+
+
