--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "ioredis": "^1.13.1",
-    "jade": "~1.11.0",
     "morgan": "~1.6.1",
+    "pug": "^3.0.2",
     "serve-favicon": "~2.3.0",
     "socket.io": "^1.3.7"
   }
